--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,22 @@
 # Configuration of Academic
 # Documentation: https://sourcethemes.com/academic/
+#
+# This file is formatted using TOML syntax - learn more at https://learnxinyminutes.com/docs/toml/
+# Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
 # The URL of your website.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-
 baseurl = "http://guansong.wang/"
+
+# Title of your site
+#title = "Academic"  # Defined in language section
+
+# Your copyright notice - appears in site footer.
+# To display a copyright symbol, type `&copy;`.
+#copyright = "&copy; 2018"  # Defined in language section
+
 theme = "hugo-academic"
-enableEmoji = true 
+enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 preserveTaxonomyNames = true
@@ -20,15 +30,24 @@ googleAnalytics = ""
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "zh"
+hasCJKLanguage = true  # Set `true` for Chinese/Japanese/Korean languages.
 defaultContentLanguageInSubdir = true
-hasCJKLanguage = true
+
+# Get last modified date for content from Git?
+enableGitInfo = false
 
 [outputs]
-  home = [ "HTML", "CSS", "RSS" ]
+  home = [ "HTML", "CSS", "RSS", "search" ]
   section = [ "HTML", "RSS" ]
 
+[outputFormats.search]
+  baseName = "search"
+  isPlainText = true
+  mediaType = "application/json"
+  notAlternative = true
+
 # Configure BlackFriday Markdown rendering.
-#   See: https://gohugo.io/readfiles/bfconfig/
+#   See: https://gohugo.io/getting-started/configuration/#configure-blackfriday
 [blackfriday]
   hrefTargetBlank = true  # `true` opens external links in a new tab.
   fractions = true  # `false` disables smart fractions (e.g. 5/12 formatted as a fraction).
@@ -46,12 +65,20 @@ hasCJKLanguage = true
   #   Choose from `default`, `classic`, or `playfair`.
   font = "default"
 
+  # Your details.
+#  name = "Lena Smith"  # Defined in language section
+#  role = "Professor of Artificial Intelligence"  # Defined in language section
+
+  # Organizations/Affiliations.
+  #   Separate multiple entries with a comma, using the form: `[ {name="Org1", url=""}, {name="Org2", url=""} ]`.
+#  organizations = [ { name = "Stanford University", url = "" } ]  # Defined in language section
 
   gravatar = false  # Get your avatar from Gravatar.com? (true/false)
   avatar = "ButtersGlass.jpg"  # Specify an avatar image (in `static/img/` folder) or delete value to disable avatar.
   email = "wang.guansong@hotmail.com"
-  office_hours = ""
-  phone = "Not telling"
+#  address = "Beijing, China"  # Defined in language section
+  office_hours = "Monday 10:00 to 13:00 or email for appointment"
+  phone = "No"
   skype = "wangguansong"
   qq = "54835499"
   wechat = "buttersstotch"
@@ -90,7 +117,7 @@ hasCJKLanguage = true
   longitude = "-122.1697"
   zoom = 15
 
-  # Date and time format (refer to Go's date format: http://fuckinggodateformat.com )
+  # Date and time format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
   #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
   date_format = "2006-01-02"
   #   Examples: "3:04 pm" or "15:04"
@@ -102,7 +129,7 @@ hasCJKLanguage = true
   # Display comment count? Requires commenting to be enabled.
   comment_count = true
 
-  # Display section pager for posts?
+  # Display next/previous section pager?
   section_pager = false
 
   # Enable global LaTeX math rendering?
@@ -118,9 +145,7 @@ hasCJKLanguage = true
   #
   #   highlight_languages
   #     Add support for highlighting additional languages. Support for
-  #     languages mentioned here will be included in all pages. You
-  #     can also set this variable for a particular page in that
-  #     page's preamble.
+  #     languages mentioned here will be included in all pages.
   #
   #     Example: highlight_languages = ["go", "lisp", "ocaml"]
   #
@@ -135,13 +160,18 @@ hasCJKLanguage = true
   #   https://cdnjs.com/libraries/highlight.js/
   #
   #   For more info on the highlighting options, see:
-  #   https://sourcethemes.com/academic/post/writing-markdown-latex/#highlighting-options
+  #   https://sourcethemes.com/academic/docs/writing-markdown-latex/#highlighting-options
   highlight = true
   highlight_languages = []
   # highlight_style = "github"
 
   # Enable native social sharing buttons?
   sharing = true
+
+  # Privacy pack
+  #   Show a cookie consent message to visitors
+  #   Anonymize IP in Google Analytics (if enabled)
+  privacy_pack = false
 
   # Link custom CSS and JS assets
   #   (relative to /static/css and /static/js respectively)
@@ -153,15 +183,16 @@ hasCJKLanguage = true
   #   The index of the publication type in the list is used as its unique numerical identifier.
   #   The numeric ID is used in a publication's frontmatter to categorize it.
   #   The language can be edited below.
-  #   For multi-lingual sites, copy this block to each language section at the end of this file.
+  #   For multilingual sites, `publication_types` can be copied to each language section at the end of this file and
+  #   translated.
   publication_types = [
     'Uncategorized',  # 0
-    'Conference proceedings',  # 1
-    'Journal',  # 2
-    'Work in progress',  # 3
-    'Technical report',  # 4
+    'Conference paper',  # 1
+    'Journal article',  # 2
+    'Manuscript',  # 3
+    'Report',  # 4
     'Book',  # 5
-    'Book chapter'  # 6
+    'Book section'  # 6
   ]
 
   # Configuration of talk pages.
@@ -171,7 +202,7 @@ hasCJKLanguage = true
 
   # Configuration of publication pages.
   [params.publications]
-    # Date format (refer to Go's date format: http://fuckinggodateformat.com )
+    # Date format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
     #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
     date_format = "January, 2006"
 
@@ -229,11 +260,17 @@ hasCJKLanguage = true
     icon = "wechat"
     icon_pack = "fa"
     link = "/img/WeChatQR.png"
-    
+
   [[params.social]]
     icon = "weibo"
     icon_pack = "fa"
     link = "//weibo.com/u/1935194357"
+  # Link to a PDF of your resume/CV from the About widget.
+  # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
+  # [[params.social]]
+  #   icon = "cv"
+  #   icon_pack = "ai"
+  #   link = "files/cv.pdf"
 
 # Navigation Links
 #   To link a homepage widget, specify the URL as a hash `#` followed by the filename of the
@@ -242,9 +279,59 @@ hasCJKLanguage = true
 [params.menus]
   # Align the main menu to the right of the page? (true/false)
   align_right = true
-# menu definition moved to languages section
 
+[[menu.main]]
+  name = "Home"
+  url = "#about"
+  weight = 1
 
+[[menu.main]]
+  name = "Publications"
+  url = "#publications_selected"
+  weight = 2
+
+[[menu.main]]
+  name = "Posts"
+  url = "#posts"
+  weight = 3
+
+[[menu.main]]
+  name = "Projects"
+  url = "#projects"
+  weight = 4
+
+[[menu.main]]
+  name = "Teaching"
+  url = "#teaching"
+  weight = 5
+
+[[menu.main]]
+  name = "Contact"
+  url = "#contact"
+  weight = 6
+
+# Link to a PDF of your resume/CV from the menu.
+# To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
+# [[menu.main]]
+#    name = "CV"
+#    url = "files/cv.pdf"
+#    weight = 7
+
+# Search.
+[params.search]
+  # Search provider:
+  #   0: No search engine
+  #   1: Built-in (Fuse)
+  #   2: Algolia (https://www.algolia.com)
+  engine = 1
+
+  # Configuration of Algolia search engine.
+  # Paste the values from your Algolia dashboard.
+  [params.search.algolia]
+    app_id = ""
+    api_key = ""
+    index_name = ""
+    show_logo = false
 
 # Taxonomies.
 [taxonomies]
@@ -254,8 +341,24 @@ hasCJKLanguage = true
 
 # Languages
 #   Create a [languages.X] block for each language you want, where X is the language ID.
+#   Refer to https://sourcethemes.com/academic/docs/language/
 
 # Configure the English version of the website.
+#[languages.en]
+#  languageCode = "en-us"
+
+# Uncomment the lines below to configure your website in a second language.
+#[languages.zh]
+#  languageCode = "zh-Hans"
+#  title = "Chinese website title..."
+#  [languages.zh.params]
+#    name = "Your name in Chinese..."
+#    role = "Your role in Chinese..."
+#  [[languages.zh.menu.main]]
+#    name = "Wo"
+#    url = "#about"
+#    weight = 1
+
 [Languages.en]
   languageCode = "en-us"
   languageName = "English"
