--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -4,23 +4,19 @@
 # This file is formatted using TOML syntax - learn more at https://learnxinyminutes.com/docs/toml/
 # Each configuration section is defined by a name in square brackets (e.g. `[outputs]`).
 
-# Title of your site (Defined in language section)
+# Title of your site
 # title = "Academic"
 
 # The URL of your site.
 # End your URL with a `/` trailing slash, e.g. `https://example.com/`.
-baseurl = "http://guansong.wang"
+baseurl = "http://guansong.wang/"
 
 # Enter a copyright notice to display in the site footer.
-# To display a copyright symbol, type `&copy;`.
+# To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
 copyright = ""
-# Defined in language section
 
 # Enable analytics by entering your Google Analytics tracking ID
 googleAnalytics = ""
-
-# Enable comments by entering your Disqus shortname
-disqusShortname = ""
 
 ############################
 ## Advanced options below ##
@@ -35,17 +31,24 @@ enableGitInfo = false
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "zh"
 hasCJKLanguage = true # Set `true` for Chinese/Japanese/Korean languages.
-defaultContentLanguageInSubdir = true
+defaultContentLanguageInSubdir = true 
+removePathAccents = true  # Workaround for https://github.com/gohugoio/hugo/issues/5687
 
 paginate = 10  # Number of items per page in paginated lists.
 enableEmoji = true
 footnotereturnlinkcontents = "<sup>^</sup>"
 ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
-preserveTaxonomyNames = true
 
 [outputs]
-  home = [ "HTML", "CSS", "RSS", "JSON" ]
+  home = [ "HTML", "RSS", "JSON", "WebAppManifest" ]
   section = [ "HTML", "RSS" ]
+
+[mediaTypes."application/manifest+json"]
+  suffixes = ["webmanifest"]
+
+[outputFormats.WebAppManifest]
+  mediaType = "application/manifest+json"
+  rel = "manifest"
 
 # Configure BlackFriday Markdown rendering.
 #   See: https://gohugo.io/getting-started/configuration/#configure-blackfriday
